Actions
Bug #10661
closedqlt: NULL pointer errors
Start date:
2019-04-01
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
../../common/io/comstar/port/qlt/qlt.c: In function 'qlt_dump_el_trace_buffer': ../../common/io/comstar/port/qlt/qlt.c:6046:11: error: comparison between pointer and integer [-Werror] if (rval != NULL) { ^~ ../../common/io/comstar/port/qlt/qlt.c:6076:29: error: comparison between pointer and integer [-Werror] } else if (*dump_current == NULL) { ^~ ../../common/io/comstar/port/qlt/qlt.c: In function 'qlt_find_trace_start': ../../common/io/comstar/port/qlt/qlt.c:6141:25: error: comparison between pointer and integer [-Werror] } else if (*trace_next != NULL) { ^~ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit ae367b8415e0f719fb9a789c8748c9000a881989
commit ae367b8415e0f719fb9a789c8748c9000a881989 Author: Toomas Soome <tsoome@me.com> Date: 2019-04-19T20:42:29.000Z 10661 qlt: NULL pointer errors Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions